parser.out
Grammar:

Rule 0     S' -> body
Rule 1     body -> _1_repeat
Rule 2     _1_repeat -> _1_items
Rule 3     _1_repeat -> <empty>
Rule 4     _1_items -> _1_items _1_item
Rule 5     _1_items -> _1_item
Rule 6     _1_item -> declaration
Rule 7     declaration -> cond
Rule 8     declaration -> struct
Rule 9     declaration -> func
Rule 10    declaration -> statement
Rule 11    func -> FUNC ID LPAREN _2_optional RPAREN LBRACE body RBRACE
Rule 12    _2_optional -> args
Rule 13    _2_optional -> <empty>
Rule 14    struct -> STRUCT ID LBRACE args RBRACE
Rule 15    args -> ID _3_repeat
Rule 16    _3_repeat -> _3_items
Rule 17    _3_repeat -> <empty>
Rule 18    _3_items -> _3_items _3_item
Rule 19    _3_items -> _3_item
Rule 20    _3_item -> COMMA ID
Rule 21    cond -> cond_if _4_repeat _5_optional
Rule 22    _4_repeat -> _4_items
Rule 23    _4_repeat -> <empty>
Rule 24    _4_items -> _4_items _4_item
Rule 25    _4_items -> _4_item
Rule 26    _4_item -> cond_elseif
Rule 27    _5_optional -> cond_else
Rule 28    _5_optional -> <empty>
Rule 29    cond_if -> IF expr LBRACE body RBRACE
Rule 30    cond_elseif -> ELSE cond_if
Rule 31    cond_else -> ELSE LBRACE body RBRACE
Rule 32    statement -> ID POWER ASSIGN expr
Rule 33    statement -> ID DIVIDE ASSIGN expr
Rule 34    statement -> ID TIMES ASSIGN expr
Rule 35    statement -> ID MINUS ASSIGN expr
Rule 36    statement -> ID PLUS ASSIGN expr
Rule 37    statement -> ID ASSIGN expr
Rule 38    expr -> ID LPAREN RPAREN
Rule 39    expr -> LPAREN expr RPAREN
Rule 40    expr -> ID
Rule 41    expr -> NUMBER
Rule 42    expr -> STRING
Rule 43    expr -> expr NOT expr  [precedence=left, level=3]
Rule 44    expr -> expr OR expr  [precedence=left, level=1]
Rule 45    expr -> expr AND expr  [precedence=left, level=2]
Rule 46    expr -> expr NE expr  [precedence=left, level=4]
Rule 47    expr -> expr GT expr  [precedence=left, level=4]
Rule 48    expr -> expr GE expr  [precedence=left, level=4]
Rule 49    expr -> expr LT expr  [precedence=left, level=4]
Rule 50    expr -> expr LE expr  [precedence=left, level=4]
Rule 51    expr -> expr EQ expr  [precedence=left, level=4]
Rule 52    expr -> expr POWER expr  [precedence=left, level=7]
Rule 53    expr -> expr DIVIDE expr  [precedence=left, level=6]
Rule 54    expr -> expr TIMES expr  [precedence=left, level=6]
Rule 55    expr -> expr MINUS expr  [precedence=left, level=5]
Rule 56    expr -> expr PLUS expr  [precedence=left, level=5]
Rule 57    func_call_args -> expr _6_repeat
Rule 58    _6_repeat -> _6_items
Rule 59    _6_repeat -> <empty>
Rule 60    _6_items -> _6_items _6_item
Rule 61    _6_items -> _6_item
Rule 62    _6_item -> COMMA expr
Rule 63    empty -> <empty>

Unused terminals:

    BREAK
    RETURN
    FALSE
    TRUE
    FOR
    RBRACK
    LBRACK
    CONTINUE
    WHILE
    RETURNS
    NIL

Terminals, with rules where they appear:

AND                  : 45
ASSIGN               : 32 33 34 35 36 37
BREAK                : 
COMMA                : 20 62
CONTINUE             : 
DIVIDE               : 33 53
ELSE                 : 30 31
EQ                   : 51
FALSE                : 
FOR                  : 
FUNC                 : 11
GE                   : 48
GT                   : 47
ID                   : 11 14 15 20 32 33 34 35 36 37 38 40
IF                   : 29
LBRACE               : 11 14 29 31
LBRACK               : 
LE                   : 50
LPAREN               : 11 38 39
LT                   : 49
MINUS                : 35 55
NE                   : 46
NIL                  : 
NOT                  : 43
NUMBER               : 41
OR                   : 44
PLUS                 : 36 56
POWER                : 32 52
RBRACE               : 11 14 29 31
RBRACK               : 
RETURN               : 
RETURNS              : 
RPAREN               : 11 38 39
STRING               : 42
STRUCT               : 14
TIMES                : 34 54
TRUE                 : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear:

_1_item              : 4 5
_1_items             : 2 4
_1_repeat            : 1
_2_optional          : 11
_3_item              : 18 19
_3_items             : 16 18
_3_repeat            : 15
_4_item              : 24 25
_4_items             : 22 24
_4_repeat            : 21
_5_optional          : 21
_6_item              : 60 61
_6_items             : 58 60
_6_repeat            : 57
args                 : 12 14
body                 : 11 29 31 0
cond                 : 7
cond_else            : 27
cond_elseif          : 26
cond_if              : 21 30
declaration          : 6
empty                : 
expr                 : 29 32 33 34 35 36 37 39 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 62
func                 : 9
func_call_args       : 
statement            : 10
struct               : 8


state 0

    (0) S' -> . body
    (1) body -> . _1_repeat
    (2) _1_repeat -> . _1_items
    (3) _1_repeat -> .
    (4) _1_items -> . _1_items _1_item
    (5) _1_items -> . _1_item
    (6) _1_item -> . declaration
    (7) declaration -> . cond
    (8) declaration -> . struct
    (9) declaration -> . func
    (10) declaration -> . statement
    (21) cond -> . cond_if _4_repeat _5_optional
    (14) struct -> . STRUCT ID LBRACE args RBRACE
    (11) func -> . FUNC ID LPAREN _2_optional RPAREN LBRACE body RBRACE
    (32) statement -> . ID POWER ASSIGN expr
    (33) statement -> . ID DIVIDE ASSIGN expr
    (34) statement -> . ID TIMES ASSIGN expr
    (35) statement -> . ID MINUS ASSIGN expr
    (36) statement -> . ID PLUS ASSIGN expr
    (37) statement -> . ID ASSIGN expr
    (29) cond_if -> . IF expr LBRACE body RBRACE
    $end            reduce using rule 3 (_1_repeat -> .)
    STRUCT          shift and go to state 11
    FUNC            shift and go to state 13
    ID              shift and go to state 12
    IF              shift and go to state 14

    body                           shift and go to state 1
    _1_repeat                      shift and go to state 2
    _1_items                       shift and go to state 3
    _1_item                        shift and go to state 4
    declaration                    shift and go to state 5
    cond                           shift and go to state 6
    struct                         shift and go to state 7
    func                           shift and go to state 8
    statement                      shift and go to state 9
    cond_if                        shift and go to state 10

state 1

    (0) S' -> body .


state 2

    (1) body -> _1_repeat .
    $end            reduce using rule 1 (body -> _1_repeat .)
    RBRACE          reduce using rule 1 (body -> _1_repeat .)


state 3

    (2) _1_repeat -> _1_items .
    (4) _1_items -> _1_items . _1_item
    (6) _1_item -> . declaration
    (7) declaration -> . cond
    (8) declaration -> . struct
    (9) declaration -> . func
    (10) declaration -> . statement
    (21) cond -> . cond_if _4_repeat _5_optional
    (14) struct -> . STRUCT ID LBRACE args RBRACE
    (11) func -> . FUNC ID LPAREN _2_optional RPAREN LBRACE body RBRACE
    (32) statement -> . ID POWER ASSIGN expr
    (33) statement -> . ID DIVIDE ASSIGN expr
    (34) statement -> . ID TIMES ASSIGN expr
    (35) statement -> . ID MINUS ASSIGN expr
    (36) statement -> . ID PLUS ASSIGN expr
    (37) statement -> . ID ASSIGN expr
    (29) cond_if -> . IF expr LBRACE body RBRACE
    $end            reduce using rule 2 (_1_repeat -> _1_items .)
    RBRACE          reduce using rule 2 (_1_repeat -> _1_items .)
    STRUCT          shift and go to state 11
    FUNC            shift and go to state 13
    ID              shift and go to state 12
    IF              shift and go to state 14

    _1_item                        shift and go to state 15
    declaration                    shift and go to state 5
    cond                           shift and go to state 6
    struct                         shift and go to state 7
    func                           shift and go to state 8
    statement                      shift and go to state 9
    cond_if                        shift and go to state 10

state 4

    (5) _1_items -> _1_item .
    STRUCT          reduce using rule 5 (_1_items -> _1_item .)
    FUNC            reduce using rule 5 (_1_items -> _1_item .)
    ID              reduce using rule 5 (_1_items -> _1_item .)
    IF              reduce using rule 5 (_1_items -> _1_item .)
    $end            reduce using rule 5 (_1_items -> _1_item .)
    RBRACE          reduce using rule 5 (_1_items -> _1_item .)


state 5

    (6) _1_item -> declaration .
    STRUCT          reduce using rule 6 (_1_item -> declaration .)
    FUNC            reduce using rule 6 (_1_item -> declaration .)
    ID              reduce using rule 6 (_1_item -> declaration .)
    IF              reduce using rule 6 (_1_item -> declaration .)
    $end            reduce using rule 6 (_1_item -> declaration .)
    RBRACE          reduce using rule 6 (_1_item -> declaration .)


state 6

    (7) declaration -> cond .
    STRUCT          reduce using rule 7 (declaration -> cond .)
    FUNC            reduce using rule 7 (declaration -> cond .)
    ID              reduce using rule 7 (declaration -> cond .)
    IF              reduce using rule 7 (declaration -> cond .)
    $end            reduce using rule 7 (declaration -> cond .)
    RBRACE          reduce using rule 7 (declaration -> cond .)


state 7

    (8) declaration -> struct .
    STRUCT          reduce using rule 8 (declaration -> struct .)
    FUNC            reduce using rule 8 (declaration -> struct .)
    ID              reduce using rule 8 (declaration -> struct .)
    IF              reduce using rule 8 (declaration -> struct .)
    $end            reduce using rule 8 (declaration -> struct .)
    RBRACE          reduce using rule 8 (declaration -> struct .)


state 8

    (9) declaration -> func .
    STRUCT          reduce using rule 9 (declaration -> func .)
    FUNC            reduce using rule 9 (declaration -> func .)
    ID              reduce using rule 9 (declaration -> func .)
    IF              reduce using rule 9 (declaration -> func .)
    $end            reduce using rule 9 (declaration -> func .)
    RBRACE          reduce using rule 9 (declaration -> func .)


state 9

    (10) declaration -> statement .
    STRUCT          reduce using rule 10 (declaration -> statement .)
    FUNC            reduce using rule 10 (declaration -> statement .)
    ID              reduce using rule 10 (declaration -> statement .)
    IF              reduce using rule 10 (declaration -> statement .)
    $end            reduce using rule 10 (declaration -> statement .)
    RBRACE          reduce using rule 10 (declaration -> statement .)


state 10

    (21) cond -> cond_if . _4_repeat _5_optional
    (22) _4_repeat -> . _4_items
    (23) _4_repeat -> .
    (24) _4_items -> . _4_items _4_item
    (25) _4_items -> . _4_item
    (26) _4_item -> . cond_elseif
    (30) cond_elseif -> . ELSE cond_if
  ! shift/reduce conflict for ELSE resolved as shift
    STRUCT          reduce using rule 23 (_4_repeat -> .)
    FUNC            reduce using rule 23 (_4_repeat -> .)
    ID              reduce using rule 23 (_4_repeat -> .)
    IF              reduce using rule 23 (_4_repeat -> .)
    $end            reduce using rule 23 (_4_repeat -> .)
    RBRACE          reduce using rule 23 (_4_repeat -> .)
    ELSE            shift and go to state 20

    _4_repeat                      shift and go to state 16
    _4_items                       shift and go to state 17
    _4_item                        shift and go to state 18
    cond_elseif                    shift and go to state 19

state 11

    (14) struct -> STRUCT . ID LBRACE args RBRACE
    ID              shift and go to state 21


state 12

    (32) statement -> ID . POWER ASSIGN expr
    (33) statement -> ID . DIVIDE ASSIGN expr
    (34) statement -> ID . TIMES ASSIGN expr
    (35) statement -> ID . MINUS ASSIGN expr
    (36) statement -> ID . PLUS ASSIGN expr
    (37) statement -> ID . ASSIGN expr
    POWER           shift and go to state 22
    DIVIDE          shift and go to state 24
    TIMES           shift and go to state 25
    MINUS           shift and go to state 26
    PLUS            shift and go to state 27
    ASSIGN          shift and go to state 23


state 13

    (11) func -> FUNC . ID LPAREN _2_optional RPAREN LBRACE body RBRACE
    ID              shift and go to state 28


state 14

    (29) cond_if -> IF . expr LBRACE body RBRACE
    (38) expr -> . ID LPAREN RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . ID
    (41) expr -> . NUMBER
    (42) expr -> . STRING
    (43) expr -> . expr NOT expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr AND expr
    (46) expr -> . expr NE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr GE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr LE expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr POWER expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr TIMES expr
    (55) expr -> . expr MINUS expr
    (56) expr -> . expr PLUS expr
    ID              shift and go to state 30
    LPAREN          shift and go to state 31
    NUMBER          shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 29

state 15

    (4) _1_items -> _1_items _1_item .
    STRUCT          reduce using rule 4 (_1_items -> _1_items _1_item .)
    FUNC            reduce using rule 4 (_1_items -> _1_items _1_item .)
    ID              reduce using rule 4 (_1_items -> _1_items _1_item .)
    IF              reduce using rule 4 (_1_items -> _1_items _1_item .)
    $end            reduce using rule 4 (_1_items -> _1_items _1_item .)
    RBRACE          reduce using rule 4 (_1_items -> _1_items _1_item .)


state 16

    (21) cond -> cond_if _4_repeat . _5_optional
    (27) _5_optional -> . cond_else
    (28) _5_optional -> .
    (31) cond_else -> . ELSE LBRACE body RBRACE
    STRUCT          reduce using rule 28 (_5_optional -> .)
    FUNC            reduce using rule 28 (_5_optional -> .)
    ID              reduce using rule 28 (_5_optional -> .)
    IF              reduce using rule 28 (_5_optional -> .)
    $end            reduce using rule 28 (_5_optional -> .)
    RBRACE          reduce using rule 28 (_5_optional -> .)
    ELSE            shift and go to state 36

    _5_optional                    shift and go to state 34
    cond_else                      shift and go to state 35

state 17

    (22) _4_repeat -> _4_items .
    (24) _4_items -> _4_items . _4_item
    (26) _4_item -> . cond_elseif
    (30) cond_elseif -> . ELSE cond_if
  ! shift/reduce conflict for ELSE resolved as shift
    STRUCT          reduce using rule 22 (_4_repeat -> _4_items .)
    FUNC            reduce using rule 22 (_4_repeat -> _4_items .)
    ID              reduce using rule 22 (_4_repeat -> _4_items .)
    IF              reduce using rule 22 (_4_repeat -> _4_items .)
    $end            reduce using rule 22 (_4_repeat -> _4_items .)
    RBRACE          reduce using rule 22 (_4_repeat -> _4_items .)
    ELSE            shift and go to state 20

    _4_item                        shift and go to state 37
    cond_elseif                    shift and go to state 19

state 18

    (25) _4_items -> _4_item .
    ELSE            reduce using rule 25 (_4_items -> _4_item .)
    STRUCT          reduce using rule 25 (_4_items -> _4_item .)
    FUNC            reduce using rule 25 (_4_items -> _4_item .)
    ID              reduce using rule 25 (_4_items -> _4_item .)
    IF              reduce using rule 25 (_4_items -> _4_item .)
    $end            reduce using rule 25 (_4_items -> _4_item .)
    RBRACE          reduce using rule 25 (_4_items -> _4_item .)


state 19

    (26) _4_item -> cond_elseif .
    ELSE            reduce using rule 26 (_4_item -> cond_elseif .)
    STRUCT          reduce using rule 26 (_4_item -> cond_elseif .)
    FUNC            reduce using rule 26 (_4_item -> cond_elseif .)
    ID              reduce using rule 26 (_4_item -> cond_elseif .)
    IF              reduce using rule 26 (_4_item -> cond_elseif .)
    $end            reduce using rule 26 (_4_item -> cond_elseif .)
    RBRACE          reduce using rule 26 (_4_item -> cond_elseif .)


state 20

    (30) cond_elseif -> ELSE . cond_if
    (29) cond_if -> . IF expr LBRACE body RBRACE
    IF              shift and go to state 14

    cond_if                        shift and go to state 38

state 21

    (14) struct -> STRUCT ID . LBRACE args RBRACE
    LBRACE          shift and go to state 39


state 22

    (32) statement -> ID POWER . ASSIGN expr
    ASSIGN          shift and go to state 40


state 23

    (37) statement -> ID ASSIGN . expr
    (38) expr -> . ID LPAREN RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . ID
    (41) expr -> . NUMBER
    (42) expr -> . STRING
    (43) expr -> . expr NOT expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr AND expr
    (46) expr -> . expr NE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr GE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr LE expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr POWER expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr TIMES expr
    (55) expr -> . expr MINUS expr
    (56) expr -> . expr PLUS expr
    ID              shift and go to state 30
    LPAREN          shift and go to state 31
    NUMBER          shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 41

state 24

    (33) statement -> ID DIVIDE . ASSIGN expr
    ASSIGN          shift and go to state 42


state 25

    (34) statement -> ID TIMES . ASSIGN expr
    ASSIGN          shift and go to state 43


state 26

    (35) statement -> ID MINUS . ASSIGN expr
    ASSIGN          shift and go to state 44


state 27

    (36) statement -> ID PLUS . ASSIGN expr
    ASSIGN          shift and go to state 45


state 28

    (11) func -> FUNC ID . LPAREN _2_optional RPAREN LBRACE body RBRACE
    LPAREN          shift and go to state 46


state 29

    (29) cond_if -> IF expr . LBRACE body RBRACE
    (43) expr -> expr . NOT expr
    (44) expr -> expr . OR expr
    (45) expr -> expr . AND expr
    (46) expr -> expr . NE expr
    (47) expr -> expr . GT expr
    (48) expr -> expr . GE expr
    (49) expr -> expr . LT expr
    (50) expr -> expr . LE expr
    (51) expr -> expr . EQ expr
    (52) expr -> expr . POWER expr
    (53) expr -> expr . DIVIDE expr
    (54) expr -> expr . TIMES expr
    (55) expr -> expr . MINUS expr
    (56) expr -> expr . PLUS expr
    LBRACE          shift and go to state 47
    NOT             shift and go to state 48
    OR              shift and go to state 49
    AND             shift and go to state 50
    NE              shift and go to state 51
    GT              shift and go to state 52
    GE              shift and go to state 53
    LT              shift and go to state 54
    LE              shift and go to state 55
    EQ              shift and go to state 56
    POWER           shift and go to state 57
    DIVIDE          shift and go to state 58
    TIMES           shift and go to state 59
    MINUS           shift and go to state 60
    PLUS            shift and go to state 61


state 30

    (38) expr -> ID . LPAREN RPAREN
    (40) expr -> ID .
    LPAREN          shift and go to state 62
    LBRACE          reduce using rule 40 (expr -> ID .)
    NOT             reduce using rule 40 (expr -> ID .)
    OR              reduce using rule 40 (expr -> ID .)
    AND             reduce using rule 40 (expr -> ID .)
    NE              reduce using rule 40 (expr -> ID .)
    GT              reduce using rule 40 (expr -> ID .)
    GE              reduce using rule 40 (expr -> ID .)
    LT              reduce using rule 40 (expr -> ID .)
    LE              reduce using rule 40 (expr -> ID .)
    EQ              reduce using rule 40 (expr -> ID .)
    POWER           reduce using rule 40 (expr -> ID .)
    DIVIDE          reduce using rule 40 (expr -> ID .)
    TIMES           reduce using rule 40 (expr -> ID .)
    MINUS           reduce using rule 40 (expr -> ID .)
    PLUS            reduce using rule 40 (expr -> ID .)
    STRUCT          reduce using rule 40 (expr -> ID .)
    FUNC            reduce using rule 40 (expr -> ID .)
    ID              reduce using rule 40 (expr -> ID .)
    IF              reduce using rule 40 (expr -> ID .)
    $end            reduce using rule 40 (expr -> ID .)
    RBRACE          reduce using rule 40 (expr -> ID .)
    RPAREN          reduce using rule 40 (expr -> ID .)


state 31

    (39) expr -> LPAREN . expr RPAREN
    (38) expr -> . ID LPAREN RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . ID
    (41) expr -> . NUMBER
    (42) expr -> . STRING
    (43) expr -> . expr NOT expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr AND expr
    (46) expr -> . expr NE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr GE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr LE expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr POWER expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr TIMES expr
    (55) expr -> . expr MINUS expr
    (56) expr -> . expr PLUS expr
    ID              shift and go to state 30
    LPAREN          shift and go to state 31
    NUMBER          shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 63

state 32

    (41) expr -> NUMBER .
    LBRACE          reduce using rule 41 (expr -> NUMBER .)
    NOT             reduce using rule 41 (expr -> NUMBER .)
    OR              reduce using rule 41 (expr -> NUMBER .)
    AND             reduce using rule 41 (expr -> NUMBER .)
    NE              reduce using rule 41 (expr -> NUMBER .)
    GT              reduce using rule 41 (expr -> NUMBER .)
    GE              reduce using rule 41 (expr -> NUMBER .)
    LT              reduce using rule 41 (expr -> NUMBER .)
    LE              reduce using rule 41 (expr -> NUMBER .)
    EQ              reduce using rule 41 (expr -> NUMBER .)
    POWER           reduce using rule 41 (expr -> NUMBER .)
    DIVIDE          reduce using rule 41 (expr -> NUMBER .)
    TIMES           reduce using rule 41 (expr -> NUMBER .)
    MINUS           reduce using rule 41 (expr -> NUMBER .)
    PLUS            reduce using rule 41 (expr -> NUMBER .)
    STRUCT          reduce using rule 41 (expr -> NUMBER .)
    FUNC            reduce using rule 41 (expr -> NUMBER .)
    ID              reduce using rule 41 (expr -> NUMBER .)
    IF              reduce using rule 41 (expr -> NUMBER .)
    $end            reduce using rule 41 (expr -> NUMBER .)
    RBRACE          reduce using rule 41 (expr -> NUMBER .)
    RPAREN          reduce using rule 41 (expr -> NUMBER .)


state 33

    (42) expr -> STRING .
    LBRACE          reduce using rule 42 (expr -> STRING .)
    NOT             reduce using rule 42 (expr -> STRING .)
    OR              reduce using rule 42 (expr -> STRING .)
    AND             reduce using rule 42 (expr -> STRING .)
    NE              reduce using rule 42 (expr -> STRING .)
    GT              reduce using rule 42 (expr -> STRING .)
    GE              reduce using rule 42 (expr -> STRING .)
    LT              reduce using rule 42 (expr -> STRING .)
    LE              reduce using rule 42 (expr -> STRING .)
    EQ              reduce using rule 42 (expr -> STRING .)
    POWER           reduce using rule 42 (expr -> STRING .)
    DIVIDE          reduce using rule 42 (expr -> STRING .)
    TIMES           reduce using rule 42 (expr -> STRING .)
    MINUS           reduce using rule 42 (expr -> STRING .)
    PLUS            reduce using rule 42 (expr -> STRING .)
    STRUCT          reduce using rule 42 (expr -> STRING .)
    FUNC            reduce using rule 42 (expr -> STRING .)
    ID              reduce using rule 42 (expr -> STRING .)
    IF              reduce using rule 42 (expr -> STRING .)
    $end            reduce using rule 42 (expr -> STRING .)
    RBRACE          reduce using rule 42 (expr -> STRING .)
    RPAREN          reduce using rule 42 (expr -> STRING .)


state 34

    (21) cond -> cond_if _4_repeat _5_optional .
    STRUCT          reduce using rule 21 (cond -> cond_if _4_repeat _5_optional .)
    FUNC            reduce using rule 21 (cond -> cond_if _4_repeat _5_optional .)
    ID              reduce using rule 21 (cond -> cond_if _4_repeat _5_optional .)
    IF              reduce using rule 21 (cond -> cond_if _4_repeat _5_optional .)
    $end            reduce using rule 21 (cond -> cond_if _4_repeat _5_optional .)
    RBRACE          reduce using rule 21 (cond -> cond_if _4_repeat _5_optional .)


state 35

    (27) _5_optional -> cond_else .
    STRUCT          reduce using rule 27 (_5_optional -> cond_else .)
    FUNC            reduce using rule 27 (_5_optional -> cond_else .)
    ID              reduce using rule 27 (_5_optional -> cond_else .)
    IF              reduce using rule 27 (_5_optional -> cond_else .)
    $end            reduce using rule 27 (_5_optional -> cond_else .)
    RBRACE          reduce using rule 27 (_5_optional -> cond_else .)


state 36

    (31) cond_else -> ELSE . LBRACE body RBRACE
    LBRACE          shift and go to state 64


state 37

    (24) _4_items -> _4_items _4_item .
    ELSE            reduce using rule 24 (_4_items -> _4_items _4_item .)
    STRUCT          reduce using rule 24 (_4_items -> _4_items _4_item .)
    FUNC            reduce using rule 24 (_4_items -> _4_items _4_item .)
    ID              reduce using rule 24 (_4_items -> _4_items _4_item .)
    IF              reduce using rule 24 (_4_items -> _4_items _4_item .)
    $end            reduce using rule 24 (_4_items -> _4_items _4_item .)
    RBRACE          reduce using rule 24 (_4_items -> _4_items _4_item .)


state 38

    (30) cond_elseif -> ELSE cond_if .
    ELSE            reduce using rule 30 (cond_elseif -> ELSE cond_if .)
    STRUCT          reduce using rule 30 (cond_elseif -> ELSE cond_if .)
    FUNC            reduce using rule 30 (cond_elseif -> ELSE cond_if .)
    ID              reduce using rule 30 (cond_elseif -> ELSE cond_if .)
    IF              reduce using rule 30 (cond_elseif -> ELSE cond_if .)
    $end            reduce using rule 30 (cond_elseif -> ELSE cond_if .)
    RBRACE          reduce using rule 30 (cond_elseif -> ELSE cond_if .)


state 39

    (14) struct -> STRUCT ID LBRACE . args RBRACE
    (15) args -> . ID _3_repeat
    ID              shift and go to state 65

    args                           shift and go to state 66

state 40

    (32) statement -> ID POWER ASSIGN . expr
    (38) expr -> . ID LPAREN RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . ID
    (41) expr -> . NUMBER
    (42) expr -> . STRING
    (43) expr -> . expr NOT expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr AND expr
    (46) expr -> . expr NE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr GE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr LE expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr POWER expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr TIMES expr
    (55) expr -> . expr MINUS expr
    (56) expr -> . expr PLUS expr
    ID              shift and go to state 30
    LPAREN          shift and go to state 31
    NUMBER          shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 67

state 41

    (37) statement -> ID ASSIGN expr .
    (43) expr -> expr . NOT expr
    (44) expr -> expr . OR expr
    (45) expr -> expr . AND expr
    (46) expr -> expr . NE expr
    (47) expr -> expr . GT expr
    (48) expr -> expr . GE expr
    (49) expr -> expr . LT expr
    (50) expr -> expr . LE expr
    (51) expr -> expr . EQ expr
    (52) expr -> expr . POWER expr
    (53) expr -> expr . DIVIDE expr
    (54) expr -> expr . TIMES expr
    (55) expr -> expr . MINUS expr
    (56) expr -> expr . PLUS expr
    STRUCT          reduce using rule 37 (statement -> ID ASSIGN expr .)
    FUNC            reduce using rule 37 (statement -> ID ASSIGN expr .)
    ID              reduce using rule 37 (statement -> ID ASSIGN expr .)
    IF              reduce using rule 37 (statement -> ID ASSIGN expr .)
    $end            reduce using rule 37 (statement -> ID ASSIGN expr .)
    RBRACE          reduce using rule 37 (statement -> ID ASSIGN expr .)
    NOT             shift and go to state 48
    OR              shift and go to state 49
    AND             shift and go to state 50
    NE              shift and go to state 51
    GT              shift and go to state 52
    GE              shift and go to state 53
    LT              shift and go to state 54
    LE              shift and go to state 55
    EQ              shift and go to state 56
    POWER           shift and go to state 57
    DIVIDE          shift and go to state 58
    TIMES           shift and go to state 59
    MINUS           shift and go to state 60
    PLUS            shift and go to state 61


state 42

    (33) statement -> ID DIVIDE ASSIGN . expr
    (38) expr -> . ID LPAREN RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . ID
    (41) expr -> . NUMBER
    (42) expr -> . STRING
    (43) expr -> . expr NOT expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr AND expr
    (46) expr -> . expr NE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr GE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr LE expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr POWER expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr TIMES expr
    (55) expr -> . expr MINUS expr
    (56) expr -> . expr PLUS expr
    ID              shift and go to state 30
    LPAREN          shift and go to state 31
    NUMBER          shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 68

state 43

    (34) statement -> ID TIMES ASSIGN . expr
    (38) expr -> . ID LPAREN RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . ID
    (41) expr -> . NUMBER
    (42) expr -> . STRING
    (43) expr -> . expr NOT expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr AND expr
    (46) expr -> . expr NE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr GE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr LE expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr POWER expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr TIMES expr
    (55) expr -> . expr MINUS expr
    (56) expr -> . expr PLUS expr
    ID              shift and go to state 30
    LPAREN          shift and go to state 31
    NUMBER          shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 69

state 44

    (35) statement -> ID MINUS ASSIGN . expr
    (38) expr -> . ID LPAREN RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . ID
    (41) expr -> . NUMBER
    (42) expr -> . STRING
    (43) expr -> . expr NOT expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr AND expr
    (46) expr -> . expr NE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr GE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr LE expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr POWER expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr TIMES expr
    (55) expr -> . expr MINUS expr
    (56) expr -> . expr PLUS expr
    ID              shift and go to state 30
    LPAREN          shift and go to state 31
    NUMBER          shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 70

state 45

    (36) statement -> ID PLUS ASSIGN . expr
    (38) expr -> . ID LPAREN RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . ID
    (41) expr -> . NUMBER
    (42) expr -> . STRING
    (43) expr -> . expr NOT expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr AND expr
    (46) expr -> . expr NE expr
    (47) expr -> . expr GT expr
    (48) expr -> . expr GE expr
    (49) expr -> . expr LT expr
    (50) expr -> . expr LE expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr POWER expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr TIMES expr
    (55) expr -> . expr MINUS expr
    (56) expr -> . expr PLUS expr
    ID              shift and go to state 30
    LPAREN          shift and go to state 31
    NUMBER          shift and go to state 32
    STRING          shift and go to state 33

    expr                           shift and go to state 71

state 46
